@@ -3,19 +3,67 @@
  * @package WordPress
  * @subpackage Portfolio Press
  */
+ 
+// Set the content width based on the theme's design and stylesheet
+if ( ! isset( $content_width ) )
+	$content_width = 640;
 
-/**
- * Sets up the options panel and default functions
- */
-require_once( TEMPLATEPATH . '/extensions/options-functions.php' );
+// Tell WordPress to run portfoliopress_setup() when the 'after_setup_theme' hook is run
+add_action( 'after_setup_theme', 'portfoliopress_setup' );
+ 
+if ( ! function_exists( 'twentyeleven_setup' ) ):
+function portfoliopress_setup() {
 
-/**
- * Enables the Portfolio custom post type
- */
-if ( !of_get_option( 'disable_portfolio', "0" ) && !function_exists( 'portfolioposttype' ) ) {
-	require_once( TEMPLATEPATH . '/extensions/portfolio-post-type.php' );
+	/**
+	 * Make the theme available for translation.
+	 * Translations can be added in the /languages/ directory.
+	 */
+	load_theme_textdomain( 'portfoliopress', TEMPLATEPATH . '/languages' );
+	
+	$locale = get_locale();
+	$locale_file = TEMPLATEPATH . "/languages/$locale.php";
+	if ( is_readable( $locale_file ) )
+		require_once( $locale_file );
+		
+	// Sets up the options panel and default functions
+	require_once( TEMPLATEPATH . '/extensions/options-functions.php' );
+	
+	// This theme styles the visual editor with editor-style.css to match the theme style
+	add_editor_style();
+	
+	// This theme uses wp_nav_menu() in one location
+	register_nav_menus( array(
+			'primary' => __( 'Primary Menu', 'portfoliopress' ),
+		) );
+	
+	// Add default posts and comments RSS feed links to head
+	add_theme_support( 'automatic-feed-links' );
+	
+	// Add support for a variety of post formats
+	add_theme_support( 'post-formats', array( 'aside', 'link', 'gallery', 'status', 'quote', 'image' ) );
+	
+	// Enqueue javascript for the menu and portfolio items
+	if ( !is_admin() ) {
+		wp_enqueue_script( 'superfish', get_template_directory_uri() .'/js/superfish.js', array( 'jquery' ) );
+		if ( !is_single() ) {
+			wp_enqueue_script( 'fader', get_template_directory_uri() . '/js/jquery.fader.js', array( 'jquery' ) );
+		}
+	}
+	
+	// Enables the portfolio custom post type.
+	if ( !of_get_option( 'disable_portfolio', "0" ) && !function_exists( 'portfolioposttype' ) ) {
+		require_once( TEMPLATEPATH . '/extensions/portfolio-post-type.php' );
+	}
+
+
 }
+endif; // portfoliopress_setup
 
+/**
+ * Displays a notice letting the user know that portfolio post type functionality
+ * will be moving into a plugin.  They can upgrade now, or wait one more
+ * version before this code is removed.
+ */
 if ( !function_exists( 'portfolioposttype' ) && current_user_can( 'install_plugins' ) ) {
 
 	/* Display a notice that can be dismissed */
@@ -48,7 +96,8 @@ if ( !function_exists( 'portfolioposttype' ) && current_user_can( 'install_plugi
 }
 
 /**
- * If 3.1 isn't installed display a notice that post type archives will not work
+ * If 3.1 isn't installed display a notice that post type archives will not work.
+ * This code will be removed in a later version.
  */
 function portfoliopress_archive_nag() {
 	global $pagenow;
@@ -62,103 +111,6 @@ function portfoliopress_archive_nag() {
 if ( get_bloginfo( 'version' ) < 3.1 ) {
 	add_action( 'admin_notices', 'portfoliopress_archive_nag' );
 }
-
-/**
- * Make theme available for translation
- * Translations can be filed in the /languages/ directory
- */
-load_theme_textdomain( 'portfoliopress', TEMPLATEPATH . '/languages' );
-
-$locale = get_locale();
-$locale_file = TEMPLATEPATH . "/languages/$locale.php";
-if ( is_readable( $locale_file ) )
-	require_once( $locale_file );
-
-/**
- * Set the content width based on the theme's design and stylesheet.
- */
-if ( ! isset( $content_width ) )
-	$content_width = 640;
-
-/**
- * This theme styles the visual editor with editor-style.css to match the theme style.
- */
-add_editor_style();
-
-/**
- * This theme uses wp_nav_menu() in one location.
- */
-register_nav_menus( array(
-		'primary' => __( 'Primary Menu', 'portfoliopress' ),
-	) );
-
-/**
- * Add default posts and comments RSS feed links to head
- */
-add_theme_support( 'automatic-feed-links' );
-
-/**
- * Enqueue Javascripts
- */
-if ( !is_admin() ) {
-	wp_enqueue_script( 'superfish', get_template_directory_uri() .'/js/superfish.js', array( 'jquery' ) );
-	wp_enqueue_script( 'fader', get_template_directory_uri() . '/js/jquery.fader.js', array( 'jquery' ) );
-}
-
-/**
- * Makes some changes to the <title> tag, by filtering the output of wp_title().
- *
- * If we have a site description and we're viewing the home page or a blog posts
- * page (when using a static front page), then we will add the site description.
- *
- * If we're viewing a search result, then we're going to recreate the title entirely.
- * We're going to add page numbers to all titles as well, to the middle of a search
- * result title and the end of all other titles.
- *
- * @param string $title Title generated by wp_title()
- * @param string $separator The separator passed to wp_title(). Twenty Ten uses a
- *  vertical bar, "|", as a separator in header.php.
- * @return string The new title, ready for the <title> tag.
- */
-function portfolio_filter_wp_title( $title, $separator ) {
-	// Don't affect wp_title() calls in feeds.
-	if ( is_feed() )
-		return $title;
-
-	// The $paged global variable contains the page number of a listing of posts.
-	// The $page global variable contains the page number of a single post that is paged.
-	// We'll display whichever one applies, if we're not looking at the first page.
-	global $paged, $page;
-
-	if ( is_search() ) {
-		// If we're a search, let's start over:
-		$title = sprintf( __( 'Search results for %s', 'portfoliopress' ), '"' . get_search_query() . '"' );
-		// Add a page number if we're on page 2 or more:
-		if ( $paged >= 2 )
-			$title .= " $separator " . sprintf( __( 'Page %s', 'portfoliopress' ), $paged );
-		// Add the site name to the end:
-		$title .= " $separator " . get_bloginfo( 'name', 'display' );
-		// We're done. Let's send the new title back to wp_title():
-		return $title;
-	}
-
-	// Otherwise, let's start by adding the site name to the end:
-	$title .= get_bloginfo( 'name', 'display' );
-
-	// If we have a site description and we're on the home/front page, add the description:
-	$site_description = get_bloginfo( 'description', 'display' );
-	if ( $site_description && ( is_home() || is_front_page() ) )
-		$title .= " $separator " . $site_description;
-
-	// Add a page number if necessary:
-	if ( $paged >= 2 || $page >= 2 )
-		$title .= " $separator " . sprintf( __( 'Page %s', 'portfoliopress' ), max( $paged, $page ) );
-
-	// Return the new title to wp_title():
-	return $title;
-}
-
-add_filter( 'wp_title', 'portfolio_filter_wp_title', 100, 2 );
 
 /**
  * Get our wp_nav_menu() fallback, wp_page_menu(), to show a home link.
@@ -220,7 +172,7 @@ if ( !of_get_option( 'version', false ) ) {
 
 /**
  * In previous versions of Portfolio Press, portfolio tags were registered as portfolio-tags
- * These need to be updated to the portfolio_tag taxonomy
+ * These need to be updated to the portfolio_tag taxonomy.
  */
 function portfoliopress_update_portfolio_tags( $term_ids ) {
 	register_taxonomy( 'portfolio-tags', 'portfolio', array( 'public'=> false ) );
@@ -238,7 +190,11 @@ function portfoliopress_update_portfolio_tags( $term_ids ) {
 	", $new_tax ) );
 }
 
-// Sets posts displayed per portfolio page to 9 -- Feel free to change
+/**
+ * Sets posts displayed per portfolio page to 9.
+ * If you change this you should also update the query $args in
+ * archive-portfolio.php and related taxonomy templates.
+ */
 function wpt_portfolio_custom_posts_per_page( &$q ) {
 	if ( get_post_type() == 'portfolio' )
 		$q->set( 'posts_per_page', 9 );
@@ -246,5 +202,3 @@ function wpt_portfolio_custom_posts_per_page( &$q ) {
 }
 
 add_filter( 'parse_query', 'wpt_portfolio_custom_posts_per_page' );
-
-?>
